# polyswarm-artifact

./: .bumpversion.cfg  .gitignore  .gitlab-ci  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.json  tox.ini
schemas/: microengine.json  scanner.json
src/polyswarmartifact/: __init__.py  artifact_type.py  exceptions.py
src/polyswarmartifact/schema/: __init__.py  artifact.json  artifact.py  assertion.json  assertion.py  bounty.json  bounty.py  microengine.json  microengine.py  scanner.json  scanner.py  schema.py  verdict.json  verdict.py
src/polyswarmartifact/schema/1.0.0/: microengine.json
tests/: test_artifact_type.py  test_assertion_schema.py  test_bounty_schema.py  test_schema.py  test_schema_generation.py  test_verdict_schema.py
